MMT-682: Fixing z-index on reactor toolbar.

--- a/app/assets/stylesheets/overrides/_redactor.scss
+++ b/app/assets/stylesheets/overrides/_redactor.scss
@@ -5,3 +5,7 @@
 .redactor-editor {
   min-height: 250px;
 }
+
+.redactor-toolbar {
+  z-index: auto;
+}
